--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -22,7 +22,7 @@
 
 <a id="merunkove-preclicky"><h2>Meruňkové preclíčky</h2></a>
 
-<p>Vezmi na vál 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného prosátého cukru, dej do něho lžíci meruňkové zavařeninky, lžíci citronové šťávy, a&nbsp;zadělej těsto; kdyby bylo řídké, musíš ještě přidat tlučeného prosátého cukru tolik, aby se nelíplo na ruce; pak dělej z&nbsp;něho malinké preclíčky, polož. je na papír a&nbsp;nech je v&nbsp;letě jenom na povětří, v&nbsp;zimě pak na teplém místě uschnout, až se od papíru oddělí, potom je ulož v&nbsp;suchém místě. Mohou se dát mezi cukrovinky. Ž téhož těstíčka mohou se také dělat na stéblo tlusté malé celtličky, a&nbsp;když uschnou, zavinou se do pěkných papírků jako jiné celtle a&nbsp;smíchají se mezi cukrovinky.</p>
+<p>Vezmi na vál 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného prosátého cukru, dej do něho lžíci meruňkové zavařeninky, lžíci citronové šťávy, a&nbsp;zadělej těsto; kdyby bylo řídké, musíš ještě přidat tlučeného prosátého cukru tolik, aby se nelíplo na ruce; pak dělej z&nbsp;něho malinké preclíčky, polož je na papír a&nbsp;nech je v&nbsp;letě jenom na povětří, v&nbsp;zimě pak na teplém místě uschnout, až se od papíru oddělí, potom je ulož v&nbsp;suchém místě. Mohou se dát mezi cukrovinky. Ž téhož těstíčka mohou se také dělat na stéblo tlusté malé celtličky, a&nbsp;když uschnou, zavinou se do pěkných papírků jako jiné celtle a&nbsp;smíchají se mezi cukrovinky.</p>
 
 <a id="ledove-koblizky"><h2>Ledové kobližky</h2></a>
 
@@ -54,7 +54,7 @@
 
 <a id="cukrova-zemcatka"><h2>Cukrová zemčátka</h2></a>
 
-<p>Utluč v&nbsp;moždíři na kaši co nejvíce můžeš půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> oloupaných mandlí,, pak nech na rendlíčku půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody vařit, a&nbsp;když se již táhne, dej do něho tu mandlovou kaši a&nbsp;míchej tím stále, aby se to nepřipálilo; když je z&nbsp;toho hodně hustá kaše, odstav ji a&nbsp;přikrej ji vlhkým čistým klůckem, aby. hodně zbělela. Potom umel bledounkou kávu, z&nbsp;té kaše dělej malinké kuličky, asi tak jako malinká zemčátka, napíchej do každé tenounkým kulatým dřívkem několik puntíčků, aby to představovalo očka, tu semletou kávu dej do tylového klůcku, popraš ní opatrně každé zemčátko, a&nbsp;pak udělej každému ostrým nožejčkem jeden nebo‘ dva řízky, aby to vypadalo tak jako by byla zemčátka rozvařená, a&nbsp;dej je na talíř; vypadá to velmi pěkně.</p>
+<p>Utluč v&nbsp;moždíři na kaši co nejvíce můžeš půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> oloupaných mandlí,, pak nech na rendlíčku půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody vařit, a&nbsp;když se již táhne, dej do něho tu mandlovou kaši a&nbsp;míchej tím stále, aby se to nepřipálilo; když je z&nbsp;toho hodně hustá kaše, odstav ji a&nbsp;přikrej ji vlhkým čistým klůckem, aby hodně zbělela. Potom umel bledounkou kávu, z&nbsp;té kaše dělej malinké kuličky, asi tak jako malinká zemčátka, napíchej do každé tenounkým kulatým dřívkem několik puntíčků, aby to představovalo očka, tu semletou kávu dej do tylového klůcku, popraš ní opatrně každé zemčátko, a&nbsp;pak udělej každému ostrým nožejčkem jeden nebo‘ dva řízky, aby to vypadalo tak jako by byla zemčátka rozvařená, a&nbsp;dej je na talíř; vypadá to velmi pěkně.</p>
 
 <a id="piskoty"><h2>Piškoty</h2></a>
 
@@ -70,7 +70,7 @@
 
 <a id="chleba-s-maslem"><h2>Chleba s&nbsp;máslem</h2></a>
 
-<p>Dej do hrnku čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, vraz k&nbsp;němu 6 žloutků, a&nbsp;míchej to asi půl hodiny vařečkou jako na piškotový dort, potom k&nbsp;tomu dej tlučeného hřebičku, skořice a&nbsp;drobně rozkrájeného citronátu; pak dej na vál mouku, vlej do ní tu míchaninku, zadělej těsto, vyválej ho a&nbsp;udělej z&nbsp;něho bochánek, pomaž ho rozkloktaným vejcem, posyp strouhanou čokoládou a&nbsp;nech ho upect. Když. vystydne, rozkrájej ho na krajíčky, udělej citronový led, pomaž nim ty krajíčky, nech je ve vlažné troubě usušit a&nbsp;dej je na stůl.</p>
+<p>Dej do hrnku čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, vraz k&nbsp;němu 6 žloutků, a&nbsp;míchej to asi půl hodiny vařečkou jako na piškotový dort, potom k&nbsp;tomu dej tlučeného hřebičku, skořice a&nbsp;drobně rozkrájeného citronátu; pak dej na vál mouku, vlej do ní tu míchaninku, zadělej těsto, vyválej ho a&nbsp;udělej z&nbsp;něho bochánek, pomaž ho rozkloktaným vejcem, posyp strouhanou čokoládou a&nbsp;nech ho upect. Když vystydne, rozkrájej ho na krajíčky, udělej citronový led, pomaž nim ty krajíčky, nech je ve vlažné troubě usušit a&nbsp;dej je na stůl.</p>
 
 <a id="mandlove-venecky"><h2>Mandlové věnečky</h2></a>
 
