--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -14,7 +14,7 @@
 
 <a id="kompot-z-angrestu"><h2>Kompot z&nbsp;angreštu</h2></a>
 
-<p>Ober čistě asi <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> ještě hodně tvrdého angreštu a&nbsp;dej ho do studené vody; nech na rendlíčku zvařit asi šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;trochou vody, načež angrešt cedníkem z&nbsp;vody. vyber, dej ho do cukru, potřásej ním a&nbsp;nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a&nbsp;dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
+<p>Ober čistě asi <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> ještě hodně tvrdého angreštu a&nbsp;dej ho do studené vody; nech na rendlíčku zvařit asi šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;trochou vody, načež angrešt cedníkem z&nbsp;vody vyber, dej ho do cukru, potřásej ním a&nbsp;nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a&nbsp;dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
 
 <a id="kompot-z-merunek"><h2>Kompot z&nbsp;meruněk</h2></a>
 
@@ -54,7 +54,7 @@
 
 <a id="kompot-ze-suchych-svestek-a-ze-sipku"><h2>Kompot ze suchých švestek a&nbsp;ze šípků</h2></a>
 
-<p>Uvař v&nbsp;pivě suché švestky s&nbsp;několika hřebičkami, kouskem celé skořice a&nbsp;citronové kůry; zároveň uvař ve víně suché šípky, a&nbsp;dej k&nbsp;nim tytéž věci jako ke švestkám, a&nbsp;mimo to kus cukru. Když jest oboje uvařeno, tedy. pěkně rovnej vždy vrstvu šípků, pak vrstvu švestek, a&nbsp;když jest vše urovnáno, udělej pěkný okolek z&nbsp;pomeranče na koláčky rozkrájeného, vše dobře posyp tlučeným cukrem a&nbsp;dej to na stůl. Nemáš-li šípky, tedy je vynech.</p>
+<p>Uvař v&nbsp;pivě suché švestky s&nbsp;několika hřebičkami, kouskem celé skořice a&nbsp;citronové kůry; zároveň uvař ve víně suché šípky, a&nbsp;dej k&nbsp;nim tytéž věci jako ke švestkám, a&nbsp;mimo to kus cukru. Když jest oboje uvařeno, tedy pěkně rovnej vždy vrstvu šípků, pak vrstvu švestek, a&nbsp;když jest vše urovnáno, udělej pěkný okolek z&nbsp;pomeranče na koláčky rozkrájeného, vše dobře posyp tlučeným cukrem a&nbsp;dej to na stůl. Nemáš-li šípky, tedy je vynech.</p>
 
 <a id="smazeny-kompot"><h2>Smažený kompot</h2></a>
 
