--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -76,7 +76,7 @@
 
 <p>Pěkné zralé švestky vlož na chvíli do horké vody, pak je oloupej, vyndej z&nbsp;nich pecky, švestky dej na.</p>
 
-<p>Čistý rendlík, nalej na ně trochu rody, přidej k&nbsp;nim asi z&nbsp;padesáti pecek utlučená jádra, a&nbsp;nech je za pilného míchání hodně rozvařit, pak je protlač skrze žíněné sejtko, dej je opět na rendlík, přidej na př. na dvě <a href="miry-a-vahy.html#libra" class="mav">libry</a> švestek <a href="miry-a-vahy.html#libra" class="mav">libru</a> přetlučeného cukru a&nbsp;nech. to mezi ustavičným mícháním do hustá zvařit. Takto vyvařené švestky rovnají se meruňkové zavařenince.</p>
+<p>Čistý rendlík, nalej na ně trochu rody, přidej k&nbsp;nim asi z&nbsp;padesáti pecek utlučená jádra, a&nbsp;nech je za pilného míchání hodně rozvařit, pak je protlač skrze žíněné sejtko, dej je opět na rendlík, přidej na př. na dvě <a href="miry-a-vahy.html#libra" class="mav">libry</a> švestek <a href="miry-a-vahy.html#libra" class="mav">libru</a> přetlučeného cukru a&nbsp;nech to mezi ustavičným mícháním do hustá zvařit. Takto vyvařené švestky rovnají se meruňkové zavařenince.</p>
 
 <a id="boruvky-zavarene"><h2>Borůvky zavařené</h2></a>
 
