--- a/src/rozlicne-octy.html
+++ b/src/rozlicne-octy.html
@@ -10,7 +10,7 @@
 
 <a id="ocet-malinovy"><h2>Ocet malinový</h2></a>
 
-<p>Na dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> pěkných zralých malin nalej čtyry <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> dobrého vinního octa a&nbsp;nech to dobře přikryté asi šest dni nepohnutě stát; potom ocet proceď skrze čisté plátno do jiné nádoby, a&nbsp;když. se usadí, opět ho proceď, načež ho nalej do malých lahviček, zandej je dobře a&nbsp;uschovej.</p>
+<p>Na dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> pěkných zralých malin nalej čtyry <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> dobrého vinního octa a&nbsp;nech to dobře přikryté asi šest dni nepohnutě stát; potom ocet proceď skrze čisté plátno do jiné nádoby, a&nbsp;když se usadí, opět ho proceď, načež ho nalej do malých lahviček, zandej je dobře a&nbsp;uschovej.</p>
 
 <p>Také se může malinový ocet následovně připravit: Když ocet sleješ, promačkej skrze plátno na čistý nový kastrol šťávu z&nbsp;malin, přidej k&nbsp;ní půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru a&nbsp;nech to vařit, přičemž pěnu pilně sbírat musíš, pak to smíchej s&nbsp;octem, naplň lahvičky, dobře je zandej, rozpuštěnou smolou zalej a&nbsp;uschovej. Takto připravený ocet neměl by scházet v&nbsp;žádné domácnosti, neboť se hodí ke mnohým pokrmům a&nbsp;zvláště v&nbsp;nemoci poskytuje, s&nbsp;vodou smíšený, velmi občerstvující nápoj.</p>
 
