--- a/src/zavarene-cele-ovoce.html
+++ b/src/zavarene-cele-ovoce.html
@@ -14,7 +14,7 @@
 
 <a id="visne-v-octe-nalozene"><h2>Višně v&nbsp;octě naložené</h2></a>
 
-<p>Čtyry <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vinního octa a&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru nech spolu povařit, přičemž tvořící-se pěnu seber a&nbsp;pak to nech vychladnout. Od zralých višní šťopky buď docela otrhej nebo vždy půl šťopky. uřízni, višně narovnej do sklenic, posyp je trochu hrubě tlučeným hřebíčkem nebo skořicí a&nbsp;nalej na ně toho vychladlého octa tolik, až jsou pohrouženy, a&nbsp;sklenice pevně zavaž; čtvrtého dne ocet slej, nech ho zase povařit a&nbsp;vychladnout, načež jej opět vlej na višně; osmého dne to ještě jednou opakuj, a&nbsp;když pak ocet opět na višně naleješ, tedy sklenice pevně zadělej a&nbsp;k&nbsp;potřebě uschovej.</p>
+<p>Čtyry <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vinního octa a&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru nech spolu povařit, přičemž tvořící-se pěnu seber a&nbsp;pak to nech vychladnout. Od zralých višní šťopky buď docela otrhej nebo vždy půl šťopky uřízni, višně narovnej do sklenic, posyp je trochu hrubě tlučeným hřebíčkem nebo skořicí a&nbsp;nalej na ně toho vychladlého octa tolik, až jsou pohrouženy, a&nbsp;sklenice pevně zavaž; čtvrtého dne ocet slej, nech ho zase povařit a&nbsp;vychladnout, načež jej opět vlej na višně; osmého dne to ještě jednou opakuj, a&nbsp;když pak ocet opět na višně naleješ, tedy sklenice pevně zadělej a&nbsp;k&nbsp;potřebě uschovej.</p>
 
 <p>Na tentýž způsob se i&nbsp;švestky nakládají.</p>
 
