--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -24,7 +24,7 @@
 
 <a id="visnova-zavareninka"><h2>Višňová zavařeninka</h2></a>
 
-<p>Z pěkných zralých višní vyndej pecky, pak dej <a href="miry-a-vahy.html#libra" class="mav">libru</a> višní na čistý rendlík, přidej k&nbsp;nim <a href="miry-a-vahy.html#libra" class="mav">libru</a> tlučeného cukru a&nbsp;nech to při mírném ohni vařit, až se utvořejí řídká lesknoucí-se povidla; hled však, aby se višně docela nerozmíchaly, nýbrž aby zůstaly v&nbsp;kouskách, tak jsou povidla chutnější a&nbsp;ouhlednější; později se mohou vždycky, kdyby byly příliš řídké, trochu převařit; potom je odstav od ohně, a&nbsp;když vychladnou, uschovej je jako předešlé.</p>
+<p>Z pěkných zralých višní vyndej pecky, pak dej <a href="miry-a-vahy.html#libra" class="mav">libru</a> višní na čistý rendlík, přidej k&nbsp;nim <a href="miry-a-vahy.html#libra" class="mav">libru</a> tlučeného cukru a&nbsp;nech to při mírném ohni vařit, až se utvořejí řídká lesknoucí se povidla; hleď však, aby se višně docela nerozmíchaly, nýbrž aby zůstaly v&nbsp;kouskách, tak jsou povidla chutnější a&nbsp;ouhlednější; později se mohou vždycky, kdyby byly příliš řídké, trochu převařit; potom je odstav od ohně, a&nbsp;když vychladnou, uschovej je jako předešlé.</p>
 
 <a id="zavareninka-z-amarelek"><h2>Zavařeninka z&nbsp;amarelek</h2></a>
 
@@ -36,7 +36,7 @@
 
 <a id="jahodova-zavareninka"><h2>Jahodová zavařeninka</h2></a>
 
-<p>Pěkné zralé lesní jahody rozmačkej a&nbsp;proceď je skrze sejtko. Libru této šťávy vlej do čistého rendlíku, přidej k&nbsp;ní tři.čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> protlučeného cukru a&nbsp;nech to jako maliny bustě zvařit; když to vychladne, dej to do sklenic, obvaz je papírem a&nbsp;uschovej. Můžeš též s&nbsp;sebou nechat svařit několik celých jahod, tak potom, když zavařeninky chceš použit, na první pohled poznáš, v&nbsp;které sklenici jsou jahody.</p>
+<p>Pěkné zralé lesní jahody rozmačkej a&nbsp;proceď je skrze sejtko. Libru této šťávy vlej do čistého rendlíku, přidej k&nbsp;ní tři čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> protlučeného cukru a&nbsp;nech to jako maliny bustě zvařit; když to vychladne, dej to do sklenic, obvaz je papírem a&nbsp;uschovej. Můžeš též s&nbsp;sebou nechat svařit několik celých jahod, tak potom, když zavařeninky chceš použit, na první pohled poznáš, v&nbsp;které sklenici jsou jahody.</p>
 
 <a id="merunkova-zavareninka"><h2>Meruňková zavařeninka</h2></a>
 
@@ -66,7 +66,7 @@
 
 <a id="stava-z-dristalek"><h2>Šťáva z&nbsp;dřišťálek</h2></a>
 
-<p>Když zralé dřišťálky několikrát mráz obešel, tedy je nasbírej a&nbsp;nech je čtyryadvacet hodin ve vlahém místě, pak je rozmačkej a&nbsp;šťávu skrze starý čistý ubrousek proceď, načež ji nech opět stát, aby se učistila. Kolik pak <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíků</a> čisté šťávy sleješ, tolik <a href="miry-a-vahy.html#libra" class="mav">liber</a> cukru musíš jemně utlouct, potom ho dej i&nbsp;se šťávou do nového kastrolu a&nbsp;nech to na mírném ohni několik minut vařit, přičemž pěnu sbírej; načež to ještě jednou proceď a&nbsp;slej to do lahvic, které zátkou dobře zandané v&nbsp;suchém místě uschovej.-Tato šťáva jest v&nbsp;domácnosti velmi prospěšná; můžeť se jí místo citronové šťávy do jídel použit, anebo s&nbsp;vodou smíšená poskytne v&nbsp;letě velmi občerstvující nápoj.</p>
+<p>Když zralé dřišťálky několikrát mráz obešel, tedy je nasbírej a&nbsp;nech je čtyryadvacet hodin ve vlahém místě, pak je rozmačkej a&nbsp;šťávu skrze starý čistý ubrousek proceď, načež ji nech opět stát, aby se učistila. Kolik pak <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíků</a> čisté šťávy sleješ, tolik <a href="miry-a-vahy.html#libra" class="mav">liber</a> cukru musíš jemně utlouct, potom ho dej i&nbsp;se šťávou do nového kastrolu a&nbsp;nech to na mírném ohni několik minut vařit, přičemž pěnu sbírej; načež to ještě jednou proceď a&nbsp;slej to do lahvic, které zátkou dobře zandané v&nbsp;suchém místě uschovej. Tato šťáva jest v&nbsp;domácnosti velmi prospěšná; můžeť se jí místo citronové šťávy do jídel použit, anebo s&nbsp;vodou smíšená poskytne v&nbsp;letě velmi občerstvující nápoj.</p>
 
 <a id="zavareninka-z-dristalek"><h2>Zavařeninka z&nbsp;dřišťálek</h2></a>
 
