--- a/src/vejce.html
+++ b/src/vejce.html
@@ -58,7 +58,7 @@
 
 <a id="vejce-s-okurkami"><h2>Vejce s&nbsp;okurkami</h2></a>
 
-<p>Udělej asi z&nbsp;osmi pěkných sardelí máslo, hled ale, aby máslo bylo čerstvé; pak uvař na tvrdo asi 3 vejce, a&nbsp;usekej bílky zvlášť a&nbsp;žloutky také zvlášť; potom roztluč asi 10 vajec a&nbsp;udělej je jako obyčejné <a href="#michane-vejce">míchané vejce</a>, nesmějí ale ztvrdnout; když jsou hotové, dej je na teplý talíř, posyp je těmi rozkrájenými bílky, ze sardelového másla udělej do věnečka pěkné hromádky a&nbsp;posyp je těmi sekanými žloutky. Okurky na půlky rozkrájené urovnej do věnečka okolo talíře.</p>
+<p>Udělej asi z&nbsp;osmi pěkných sardelí máslo, hleď ale, aby máslo bylo čerstvé; pak uvař na tvrdo asi 3 vejce, a&nbsp;usekej bílky zvlášť a&nbsp;žloutky také zvlášť; potom roztluč asi 10 vajec a&nbsp;udělej je jako obyčejné <a href="#michane-vejce">míchané vejce</a>, nesmějí ale ztvrdnout; když jsou hotové, dej je na teplý talíř, posyp je těmi rozkrájenými bílky, ze sardelového másla udělej do věnečka pěkné hromádky a&nbsp;posyp je těmi sekanými žloutky. Okurky na půlky rozkrájené urovnej do věnečka okolo talíře.</p>
 
 <a id="smazene-vejce-s-horcici"><h2>Smažené vejce s&nbsp;hořčici</h2></a>
 
