--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -2,7 +2,7 @@
 
 <a id="pokroutky-z-horkych-mandli"><h2>Pokroutky z&nbsp;hořkých mandlí</h2></a>
 
-<p>Ustrouhej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých a&nbsp;čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> hořkých oloupaných mandlí, dej je na mísu, k&nbsp;nim půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, a&nbsp;zamíchej do toho sníh ze sedmi neb osmi bílků, načež z&nbsp;toho dělej na papír na plech položený malé kulaté hromádky a&nbsp;nech je směšně do zlatová upect, pak je smekni s&nbsp;papíru. Také je můžeš dělat na oplatky, a&nbsp;chceš-li, můžeš také vzíti samé sladké mandle á dát k&nbsp;tomu drobně rozkrájenou kůru s&nbsp;jednoho citronu.</p>
+<p>Ustrouhej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých a&nbsp;čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> hořkých oloupaných mandlí, dej je na mísu, k&nbsp;nim půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, a&nbsp;zamíchej do toho sníh ze sedmi neb osmi bílků, načež z&nbsp;toho dělej na papír na plech položený malé kulaté hromádky a&nbsp;nech je směšně do zlatová upect, pak je smekni s&nbsp;papíru. Také je můžeš dělat na oplatky, a&nbsp;chceš-li, můžeš také vzíti samé sladké mandle a dát k&nbsp;tomu drobně rozkrájenou kůru s&nbsp;jednoho citronu.</p>
 
 <a id="jine-horke-pokroutky"><h2>Jiné hořké pokroutky</h2></a>
 
