--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -305,6 +305,6 @@ Po malé přestávce:
 	<li>Pivo, víno, <a href="napoje.html#kava">káva</a></li>
 </ol>
 
-<p>Dle těchto příkladů se může kuchařka řídit. V&nbsp;postní den není radno hostina dávat, leda když se tomu vyhnouti nelze; v&nbsp;tom pádu se musí kuchařka řídit dle ryb, které jsou k&nbsp;dostání. Rozmnožit se to nechá, když se dají dvoje zadělávané a&nbsp;dvoje pečené nebo smažené ryby, dva nákypy, které si nejsou podobny, ku př. španělské větry se šodó a&nbsp;nákyp z&nbsp;omeletek. Taktéž rosolované, pečené á smažené ryby mohou se dle libosti rozmnožit a&nbsp;na rozličný způsob připravit.</p>
+<p>Dle těchto příkladů se může kuchařka řídit. V&nbsp;postní den není radno hostina dávat, leda když se tomu vyhnouti nelze; v&nbsp;tom pádu se musí kuchařka řídit dle ryb, které jsou k&nbsp;dostání. Rozmnožit se to nechá, když se dají dvoje zadělávané a&nbsp;dvoje pečené nebo smažené ryby, dva nákypy, které si nejsou podobny, ku př. španělské větry se šodó a&nbsp;nákyp z&nbsp;omeletek. Taktéž rosolované, pečené a smažené ryby mohou se dle libosti rozmnožit a&nbsp;na rozličný způsob připravit.</p>
 
 <p>Dalo by se sice ještě mnoho psáti, myslím však, že každá dívčinka neb hospodyňka, která se to, co v&nbsp;této knize uvedeno jest, náležitě naučí, má zatím dost pro domácí potřebu; ostatně bude-li pilna v&nbsp;kuchaření, bude jí snadno všelicos změnit a&nbsp;slušnou tabuli uspořádat.</p>
