--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -88,7 +88,7 @@
 
 <a id="gulas"><h2>Gulaš</h2></a>
 
-<p>Rozkrájej na malé kostky pro 6 osob nejméně půl druhé nebo dvě <a href="miry-a-vahy.html#libra" class="mav">libry</a> hovězího masa, buď od svíčkové pečeně nebo ze spodního šálu, dej ho na rendlík, k&nbsp;němu kousek másla (na dvě <a href="miry-a-vahy.html#libra" class="mav">libry</a> masa asi tři loty), dvě cibule á petruželóvý kořínek, oboje drobně rozkrájeno, a&nbsp;nech to spěšně dusit; kdyby to tuze vysmáhlo, podlej to trochou hovězí polívky nebo také vody, osol to patřičně, a&nbsp;dej k&nbsp;tomu trochu majoránky, trochu tureckého pepře (Paprika) nebo jen obyčejného pepře; když to dáš na mísu, udělej okolo věnec ze zemčat.</p>
+<p>Rozkrájej na malé kostky pro 6 osob nejméně půl druhé nebo dvě <a href="miry-a-vahy.html#libra" class="mav">libry</a> hovězího masa, buď od svíčkové pečeně nebo ze spodního šálu, dej ho na rendlík, k&nbsp;němu kousek másla (na dvě <a href="miry-a-vahy.html#libra" class="mav">libry</a> masa asi tři loty), dvě cibule a petruželóvý kořínek, oboje drobně rozkrájeno, a&nbsp;nech to spěšně dusit; kdyby to tuze vysmáhlo, podlej to trochou hovězí polívky nebo také vody, osol to patřičně, a&nbsp;dej k&nbsp;tomu trochu majoránky, trochu tureckého pepře (Paprika) nebo jen obyčejného pepře; když to dáš na mísu, udělej okolo věnec ze zemčat.</p>
 
 <p>Tento guláš může se dělati také z&nbsp;telecího i&nbsp;ze skopového masa.</p>
 
