--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -116,7 +116,7 @@
 
 <a id="smazenec-krupicny"><h2>Smaženec krupičný</h2></a>
 
-<p>Uvař z&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> krupice hustou kaši v&nbsp;mléce á nech ji prochladnout; potom k&nbsp;ni přimíchej kousek nového másla, 8 celých vajec, čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;krapýtek soli, nech na rendlíku rozpálit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> másla, vlej do něj tu kaši a&nbsp;nech to jako předešle v&nbsp;troubě vypéct, pak to železnou lopatkou rozkrájej, vyndej na misku, posyp ještě hojně cukrem a&nbsp;nes na stůl.</p>
+<p>Uvař z&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> krupice hustou kaši v&nbsp;mléce a nech ji prochladnout; potom k&nbsp;ni přimíchej kousek nového másla, 8 celých vajec, čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;krapýtek soli, nech na rendlíku rozpálit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> másla, vlej do něj tu kaši a&nbsp;nech to jako předešle v&nbsp;troubě vypéct, pak to železnou lopatkou rozkrájej, vyndej na misku, posyp ještě hojně cukrem a&nbsp;nes na stůl.</p>
 
 <a id="smazenec-s-vanilovou-smetanou"><h2>Smaženec s&nbsp;vanilovou smetanou</h2></a>
 
@@ -136,7 +136,7 @@
 
 <a id="zemlovka-s-hrozinkami"><h2>Žemlovka s&nbsp;hrozinkami</h2></a>
 
-<p>Vymaž formu nebo pěkný kleitovaný rendlík máslem a&nbsp;vysyp ho strouhanou žemličkovou kůrkou, rozkrájej žemličky na lístky, poklaď dno vrstvou těch žemliček, posyp je malýma hrozinkama a&nbsp;krájenou pomerančovou kůrou, pak dej zase žemličky, opět je posyp, á tak pokračuj, až je všecko; navrchu to poklad kousky nového másla, rozkloktej v&nbsp;sladké smetaně asi dvě vejce, dej k&nbsp;tomu trochu cukru, krapýtek soli, trochu citronové kůry, dobře to rozkloktej a&nbsp;polej tím ty žemličky; pak to dej do trouby, nech to vysmahnout a&nbsp;povrchu hezky do červena opéct; potom to posyp cukrem a&nbsp;dej to na stůl.</p>
+<p>Vymaž formu nebo pěkný kleitovaný rendlík máslem a&nbsp;vysyp ho strouhanou žemličkovou kůrkou, rozkrájej žemličky na lístky, poklaď dno vrstvou těch žemliček, posyp je malýma hrozinkama a&nbsp;krájenou pomerančovou kůrou, pak dej zase žemličky, opět je posyp, a tak pokračuj, až je všecko; navrchu to poklad kousky nového másla, rozkloktej v&nbsp;sladké smetaně asi dvě vejce, dej k&nbsp;tomu trochu cukru, krapýtek soli, trochu citronové kůry, dobře to rozkloktej a&nbsp;polej tím ty žemličky; pak to dej do trouby, nech to vysmahnout a&nbsp;povrchu hezky do červena opéct; potom to posyp cukrem a&nbsp;dej to na stůl.</p>
 
 <a id="zemlickovy-svitek-s-povidlami"><h2>Žemličkový svítek s&nbsp;povidlami</h2></a>
 
@@ -220,7 +220,7 @@
 
 <a id="lite-strudle-s-tvarohem"><h2>Lité štrudle s&nbsp;tvarohem</h2></a>
 
-<p>Udělají se na týž způsob jako předešlé, jen že se místo povidel nadějou tvarohem následovně připraveným: Utři půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> tvarohu se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> másla a&nbsp;se šesti <a href="miry-a-vahy.html#lot" class="mav">loty</a> ustrouhaného parmazánského sýra, a&nbsp;vmíchej do toho čtyry žloutky; načež tím omeletky pomaž, zaviň a&nbsp;klad je vedle sebe na máslem hodně vymazaný kastrol nebo do formy, pomaž je hodně rozpuštěným máslem á nech je v&nbsp;troubě napolo upect, potom je ještě potři máslem, posyp strouhaným parmazánským sýrem a&nbsp;nech je dopect. Také se mohou nadívat <a href="#dobra-strudle-s-tvarohem">sladkým tvarohem</a>.</p>
+<p>Udělají se na týž způsob jako předešlé, jen že se místo povidel nadějou tvarohem následovně připraveným: Utři půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> tvarohu se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> másla a&nbsp;se šesti <a href="miry-a-vahy.html#lot" class="mav">loty</a> ustrouhaného parmazánského sýra, a&nbsp;vmíchej do toho čtyry žloutky; načež tím omeletky pomaž, zaviň a&nbsp;klad je vedle sebe na máslem hodně vymazaný kastrol nebo do formy, pomaž je hodně rozpuštěným máslem a nech je v&nbsp;troubě napolo upect, potom je ještě potři máslem, posyp strouhaným parmazánským sýrem a&nbsp;nech je dopect. Také se mohou nadívat <a href="#dobra-strudle-s-tvarohem">sladkým tvarohem</a>.</p>
 
 <a id="lite-strudle-s-cokoladou"><h2>Lité štrudle s&nbsp;čokoládou</h2></a>
 
