--- a/src/vejce.html
+++ b/src/vejce.html
@@ -62,7 +62,7 @@
 
 <a id="smazene-vejce-s-horcici"><h2>Smažené vejce s&nbsp;hořčici</h2></a>
 
-<p>Nech na malém kastrolku rozpálit kousek másla, vraz do něho jedno vejce, a&nbsp;hned ho plechovou lžicí dohromady shrň a&nbsp;urovnej, aby zůstalo hezky kulaté, a&nbsp;nech ho zprudka smažit, aby neztvrdlo; když je žloutek již bílkem potažen, tedy vejce vyndej na misku na teplém místě postavenou, do másla vraz hned zase jiné vejce, a&nbsp;tak pokračuj, až jich máš tolik, kolik jich potřebuješ, á každé povrchu malinko osol. Omáčku dělej takto: Usmaž na másle půl drobounce skrájené cibule do zlatová, přidej k&nbsp;ní čtyry lžíce hořčice, lžíci estragonového nebo vinního octa, malý kousek cukru, a&nbsp;nech to zvařit. Když to chceš dáti na stůl, tedy vejce na misce urovnej a&nbsp;podlej je omáčkou.</p>
+<p>Nech na malém kastrolku rozpálit kousek másla, vraz do něho jedno vejce, a&nbsp;hned ho plechovou lžicí dohromady shrň a&nbsp;urovnej, aby zůstalo hezky kulaté, a&nbsp;nech ho zprudka smažit, aby neztvrdlo; když je žloutek již bílkem potažen, tedy vejce vyndej na misku na teplém místě postavenou, do másla vraz hned zase jiné vejce, a&nbsp;tak pokračuj, až jich máš tolik, kolik jich potřebuješ, a každé povrchu malinko osol. Omáčku dělej takto: Usmaž na másle půl drobounce skrájené cibule do zlatová, přidej k&nbsp;ní čtyry lžíce hořčice, lžíci estragonového nebo vinního octa, malý kousek cukru, a&nbsp;nech to zvařit. Když to chceš dáti na stůl, tedy vejce na misce urovnej a&nbsp;podlej je omáčkou.</p>
 
 <a id="ztracene-vejce"><h2>Ztracené vejce</h2></a>
 
