--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -70,7 +70,7 @@
 
 <a id="velke-kolace-ku-kave"><h2>Velké koláče ku kávě</h2></a>
 
-<p>Dej na mísu tři <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> pěkné mouky, nech v&nbsp;hrnečku rozpustit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> másla, přidej k&nbsp;němu <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> vlažné smetany, tři‘ žloutky, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> rozdělaných lisovaných kvasnic a&nbsp;s&nbsp;půl citronu nakrájenou kůru, zadělej tím těsto, osol a&nbsp;oslaď ho patřičně, vypracuj ho náležitě a&nbsp;nech ho kynout; pak pomaž plechy nebo papíry máslem, udělej na ně z&nbsp;těsta velké koláče, kraje potři máslem koláče posyp hojně tlučenou skořicí, smíšenou s&nbsp;cukrem a&nbsp;sekanými mandlemi, anebo <a href="nadivky-do-kolacu-buchticek-a-koblih.html#jicha-k-posypani-kolacu">jíchou</a>, a&nbsp;nech je pěkně upect.</p>
+<p>Dej na mísu tři <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> pěkné mouky, nech v&nbsp;hrnečku rozpustit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> másla, přidej k&nbsp;němu <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> vlažné smetany, tři žloutky, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> rozdělaných lisovaných kvasnic a&nbsp;s&nbsp;půl citronu nakrájenou kůru, zadělej tím těsto, osol a&nbsp;oslaď ho patřičně, vypracuj ho náležitě a&nbsp;nech ho kynout; pak pomaž plechy nebo papíry máslem, udělej na ně z&nbsp;těsta velké koláče, kraje potři máslem koláče posyp hojně tlučenou skořicí, smíšenou s&nbsp;cukrem a&nbsp;sekanými mandlemi, anebo <a href="nadivky-do-kolacu-buchticek-a-koblih.html#jicha-k-posypani-kolacu">jíchou</a>, a&nbsp;nech je pěkně upect.</p>
 
 <a id="dulkove-kolace"><h2>Důlkové koláče</h2></a>
 
@@ -210,7 +210,7 @@
 
 <a id="sucharky-k-vinu"><h2>Suchárky k&nbsp;vínu</h2></a>
 
-<p>Dej na mísu čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného prosátého cukru, vraz do něho 10 žloutků, a&nbsp;tři to něco přes půl hodiny pak do toho dej trochu fenyklu, z&nbsp;těch desíti bilků tuhý sníh a&nbsp;10 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> pěkné mouky, zamíchej to, dej to do vymazané suchárkové formy a&nbsp;nech to zvolna pect, až to začne padat, pak to vyklop a&nbsp;nech vystydnout; potom to rozkrájej na dvě stébla tlusté kousky, vlož je na papír na plech a&nbsp;nech je v&nbsp;troubě ne příliš horké osušit‘.</p>
+<p>Dej na mísu čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného prosátého cukru, vraz do něho 10 žloutků, a&nbsp;tři to něco přes půl hodiny pak do toho dej trochu fenyklu, z&nbsp;těch desíti bilků tuhý sníh a&nbsp;10 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> pěkné mouky, zamíchej to, dej to do vymazané suchárkové formy a&nbsp;nech to zvolna pect, až to začne padat, pak to vyklop a&nbsp;nech vystydnout; potom to rozkrájej na dvě stébla tlusté kousky, vlož je na papír na plech a&nbsp;nech je v&nbsp;troubě ne příliš horké osušit.</p>
 
 <a id="marcipanky"><h2>Marcipánky</h2></a>
 
