--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -146,7 +146,7 @@
 
 <a id="nakyp-s-racim-maslem"><h2>Nákyp s&nbsp;račím máslem</h2></a>
 
-<p>Vraz do <a href="miry-a-vahy.html#zejdlik" class="mav">dvoužejdlíkového</a> hrnku tři žloutky a&nbsp;tři celé vejce, nalej do nich dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> sladké smetany, dobře to rozkloktej, naceď do toho šťávu z&nbsp;celého citronu skrze sejtko, aby do toho nepřišla žádná jadýrka, ‚ a&nbsp;nech to chvilku vařit, tak aby se‘ z&nbsp;toho udělal pěkný tvaroh; pak to vlej do čistého servítu a&nbsp;nech to mezi dvěma prkénkama kamenem obtíženo tak jako jiný tvaroh vysáknout; potom to vezmi na mísy, rozetři to dobře s&nbsp;kouskem nového másla, aby nezůstaly žádné kousky, zamíchej do toho 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru a&nbsp;šest žloutků, dej k&nbsp;tomu tři lžíce račího másla, s&nbsp;půl citronu rozkrájenou kůrku, trochu květu, a&nbsp;všecko dobře umíchej; nyní vymaž formu máslem, vysyp ji žemličkou, vlej to do ní a&nbsp;nech to dobře upect; pak to vyklop, posyp cukrem a&nbsp;dej to na stůl.</p>
+<p>Vraz do <a href="miry-a-vahy.html#zejdlik" class="mav">dvoužejdlíkového</a> hrnku tři žloutky a&nbsp;tři celé vejce, nalej do nich dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> sladké smetany, dobře to rozkloktej, naceď do toho šťávu z&nbsp;celého citronu skrze sejtko, aby do toho nepřišla žádná jadýrka, ‚ a&nbsp;nech to chvilku vařit, tak aby se z&nbsp;toho udělal pěkný tvaroh; pak to vlej do čistého servítu a&nbsp;nech to mezi dvěma prkénkama kamenem obtíženo tak jako jiný tvaroh vysáknout; potom to vezmi na mísy, rozetři to dobře s&nbsp;kouskem nového másla, aby nezůstaly žádné kousky, zamíchej do toho 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru a&nbsp;šest žloutků, dej k&nbsp;tomu tři lžíce račího másla, s&nbsp;půl citronu rozkrájenou kůrku, trochu květu, a&nbsp;všecko dobře umíchej; nyní vymaž formu máslem, vysyp ji žemličkou, vlej to do ní a&nbsp;nech to dobře upect; pak to vyklop, posyp cukrem a&nbsp;dej to na stůl.</p>
 
 <a id="nakyp-spenatovy"><h2>Nákyp špenátový</h2></a>
 
@@ -226,7 +226,7 @@
 
 <a id="nakyp-jahodovy"><h2>Nákyp jahodový</h2></a>
 
-<p>Rozmačkej a&nbsp;proceď skrze sejtko dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> pěkných jahod; nech na novém kastrolu půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru s&nbsp;trochou vody rozpustit, dej však pozor, aby nezhnědl, pak ho vlej na misku, přimíchej k&nbsp;němu ty protlačené jahody a&nbsp;z&nbsp;desíti bílků tuhý sníh, dej to na porcelánovou misku hezky do vršku, postav to na plech solí hodně posypaný, posyp to povrchu trochu tlučeným cukrem‘ a&nbsp;nech to zvolna pect. Když to začne zevnitř pukat, posyp to cukrem a&nbsp;nes to spěšně na stůl.</p>
+<p>Rozmačkej a&nbsp;proceď skrze sejtko dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> pěkných jahod; nech na novém kastrolu půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru s&nbsp;trochou vody rozpustit, dej však pozor, aby nezhnědl, pak ho vlej na misku, přimíchej k&nbsp;němu ty protlačené jahody a&nbsp;z&nbsp;desíti bílků tuhý sníh, dej to na porcelánovou misku hezky do vršku, postav to na plech solí hodně posypaný, posyp to povrchu trochu tlučeným cukrem a&nbsp;nech to zvolna pect. Když to začne zevnitř pukat, posyp to cukrem a&nbsp;nes to spěšně na stůl.</p>
 
 <a id="nakyp-malinovy"><h2>Nákyp malinový</h2></a>
 
