--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -28,7 +28,7 @@
 
 <a id="omacka-koprova"><h2>Omáčka koprová</h2></a>
 
-<p>Nech vařit v&nbsp;hrnečků hovězí polívku a&nbsp;vinní ocet; když‘ se to Vaří, dej do toho drobnince rozkrájený kopr do jiného hrnku dej kousek nového másla, trochu mouky trochu kyselé husté smetany a&nbsp;jedení nebo dva žloutky, dobře to rozmíchej, pák s&nbsp;tou koprovou polívkou zakloktej, nech to ještě trochu povařit – a&nbsp;omáčka je hotová.</p>
+<p>Nech vařit v&nbsp;hrnečků hovězí polívku a&nbsp;vinní ocet; když se to vaří, dej do toho drobnince rozkrájený kopr do jiného hrnku dej kousek nového másla, trochu mouky trochu kyselé husté smetany a&nbsp;jedení nebo dva žloutky, dobře to rozmíchej, pák s&nbsp;tou koprovou polívkou zakloktej, nech to ještě trochu povařit – a&nbsp;omáčka je hotová.</p>
 
 <a id="omacka-z-koreni"><h2>Omáčka z&nbsp;koření</h2></a>
 
