--- a/src/prichoutky-cili-asietky.html
+++ b/src/prichoutky-cili-asietky.html
@@ -38,7 +38,7 @@
 
 <a id="zemlicky-se-sardelovym-maslem"><h2>Žemličky se sardelovým máslem</h2></a>
 
-<p>Nakrájej tenké řízky ze čtyr žemliček, utři čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> másla se čtyřmi sardelemi, uvař tři vejce na tvrdo, žloutky vyndej a&nbsp;rozetři, a‘ bílky usekej na drobno; nyní pomaž půlku každého řízku sardelovým máslem a&nbsp;druhou půlku žloutkami, na žloutky poklad sekané uzené maso a&nbsp;na máslo sekané bílky.</p>
+<p>Nakrájej tenké řízky ze čtyr žemliček, utři čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> másla se čtyřmi sardelemi, uvař tři vejce na tvrdo, žloutky vyndej a&nbsp;rozetři, a bílky usekej na drobno; nyní pomaž půlku každého řízku sardelovým máslem a&nbsp;druhou půlku žloutkami, na žloutky poklad sekané uzené maso a&nbsp;na máslo sekané bílky.</p>
 
 <a id="zemlicky-se-sekaninkon"><h2>Žemličky se sekaninkon</h2></a>
 
